--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.2
 MarkupSafe==1.1.1
+Pillow==7.1.2
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
@@ -19,3 +20,4 @@ six==1.14.0
 SQLAlchemy==1.3.17
 Werkzeug==1.0.1
 WTForms==2.3.1
+XlsxWriter==1.2.9
